@@ -12,7 +12,7 @@
 .item-excerpt { 
   overflow-y: auto;
   max-height: 160px;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .service-header-bar {
